force-app/main/default/objects/NST_Pricing_Shadow__c/NST_Pricing_Shadow__c.object-meta.xml
<CustomObject>
    <label>NST Pricing Shadow</label>
    <nameField>
        <label>NST Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NST Pricing Shadow</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>