force-app/main/default/objects/NST_Pricing_Shadow__c/fields/Application_Exposure_Total__c.field-meta.xml
<CustomField>
    <fullName>Application_Exposure_Total__c</fullName>
    <formula>Application__r.Exposure_CAA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Exposure Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>