force-app/main/default/objects/NST_Pricing_Shadow__c/fields/Application_NTF_Pengajuan__c.field-meta.xml
<CustomField>
    <fullName>Application_NTF_Pengajuan__c</fullName>
    <formula>Application__r.NTF_Pengajuan_CAA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application NTF Pengajuan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>