force-app/main/default/objects/NST_Pricing_Shadow__c/fields/Approval_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Approval_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final NST Pricing By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NST_Pricing_Shadow</relationshipName>
    <type>Lookup</type>
</CustomField>